--- a/app/src/main/res/layout/activity_grade_calculator.xml
+++ b/app/src/main/res/layout/activity_grade_calculator.xml
@@ -29,11 +29,12 @@
             android:layout_height="wrap_content">
 
 
-        <EditText
-            android:id="@+id/studentName"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="50dp"/>
+            <EditText
+                android:id="@+id/studentName"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:singleLine="true"
+                android:layout_marginBottom="50dp"/>
 
         </LinearLayout>
 
@@ -57,10 +58,11 @@
 
                 <EditText
                     android:id="@+id/quizScore"
-                    android:layout_width="30dp"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"/>
-        </LinearLayout>
+                    android:layout_gravity="center_horizontal"
+                    android:inputType="number"/>
+            </LinearLayout>
 
 
 
@@ -77,9 +79,10 @@
 
                 <EditText
                     android:id="@+id/assignmentScore"
-                    android:layout_width="30dp"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"/>
+                    android:layout_gravity="center_horizontal"
+                    android:inputType="number"/>
             </LinearLayout>
 
 
@@ -97,9 +100,10 @@
 
                 <EditText
                     android:id="@+id/midtermScore"
-                    android:layout_width="30dp"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"/>
+                    android:layout_gravity="center_horizontal"
+                    android:inputType="number"/>
             </LinearLayout>
 
 
@@ -117,14 +121,31 @@
 
                 <EditText
                     android:id="@+id/finalScore"
-                    android:layout_width="30dp"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"/>
+                    android:layout_gravity="center_horizontal"
+                    android:inputType="number" />
             </LinearLayout>
 
 
 
+
+
         </LinearLayout>
+
+        <Button
+            android:id="@+id/calculate_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/calculate_button"/>
+
+        <TextView
+            android:id="@+id/calculatedLetterGrade"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:textSize="52sp"
+            android:textAlignment="center" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
